# premiere-relink

./: .gitignore  CLAUDE.md  CODEX.md  Premiere Relink.command  PremiereRelink.spec  TODO.md  app_web.py  build_app.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: run_tests.sh  tdd_guard.py
.github/workflows/: ci.yml
context/: DECISIONS.md  LEARNINGS.md  PROJECT.md
dist-assets/: ★ 먼저 읽어주세요 (설치방법).txt
docs/: distribution-guide.md  notion-배포페이지.md
docs/superpowers/plans/: 2026-06-01-premiere-media-relink-v1.md  2026-06-04-youtube-benchmark-planner-mvp.md
docs/superpowers/specs/: 2026-06-01-premiere-media-relink-design.md  2026-06-04-youtube-channel-benchmark-planner-design.md
engine/: detector.py  indexer.py  matcher.py  models.py  pipeline.py  reader.py  writer.py
scripts/: relink_skill.py  smoke_real.py  verify_relink.py
skill/: SKILL.md
templates/: index.html
tests/: conftest.py  test_detector.py  test_indexer.py  test_matcher.py  test_models.py  test_pipeline.py  test_reader.py  test_writer.py
